# Changelog
Todas as alterações significativas ao CatecheSis são registadas aqui.

## [Versão 2.0.0] - 2022-08-28

#### Novidades:
- O CatecheSis torna-se _open-source_ :)
- Novos manuais de utilizador e de instalação;
- A folha de presenças inicia agora em Setembro, para suportar paróquias cuja catequese se inicia naquele mês;

#### Correções:
- Ocorria um erro (página em branco) ao criar grupos de catequese para novo ano;
- Corrigido scroll para painel de edição de grupo de catequese;
- Corrigido acordo ortográfico em algumas páginas;


## [Versão 2.0.0-beta.2.0] - 2022-06-05

#### Novidades:
- Adicionados campos de configuração relativos ao RGPD;
- Logotipo da paróquia é agora incluído no cabeçalho dos documentos Word gerados;
- Documento relativo ao RGPD é agora automaticamente gerado;

#### Correções:
- Algumas sessões de catequese virtual não carregavam corretamente;
- Eliminado espaço branco na página de erro 404; 


## [Versão 2.0.0-beta.1.0] - 2022-04-18

Primeiro lançamento (beta) de uma nova linhagem de desenvolvimento (versão *major* 2).

Primeiro marco em direção a uma nova era do CatecheSis, a caminho de se tornar *open-source* e disponível para outras paróquias.

#### Novidades:
- Alargadas as permissões dos catequistas. Todos catequistas podem agora:
    - editar as fichas dos seus catequizandos;
    - registar sacramentos para o seus grupos de catequese;
    - listar os escuteiros dos seus grupos;
- Nova imagem da página pública da catequese;
- Novo logotipo do CatecheSis, esquema de cores, ícones e animações;
- Novo ecrã de autenticação;
- Novo ecrã de resumo (*dashboard*) que substitui a antiga página *"minha conta"*;
- Nova página de configurações que agrega vários painéis de configuração num único lugar;
- Dados específicos da paróquia são agora configuráveis, nomeadamente:
    - nome da paróquia e localidade;
    - logotipo da paróquia;
    - rodapé mostrado em todas as páginas impressas;
    - imagem mostrada no site público da catequese;