@@ -39,12 +39,21 @@
 
   <div style="margin-bottom: 40px;"></div>
 
+  <h2 id="versão-2.0.1---2022-09-01">[Versão 2.0.1] - 2022-09-01</h2>
+  <h4><img src="img/bug_transparent_icon.png"> Correções:</h4>
+  <ul class="incremental">
+    <li>Corrigidos links na documentação;</li>
+  </ul>
 
-  <h2 id="versão-2.0.0---2022-09-01">[Versão 2.0.0] - 2022-08-28</h2>
+  <hr>
+
+
+  <h2 id="versão-2.0.0---2022-08-28">[Versão 2.0.0] - 2022-08-28</h2>
   <h4><img src="img/magic_wand_transparent_icon.png"> Novidades:</h4>
   <ul class="incremental">
     <li>O CatecheSis torna-se <i>open-source</i> :)</li>
     <li>Novos manuais de utilizador e de instalação;</li>
+    <li>Introduzido link para a comunidade no Discord, no menu de ajuda;</li>
     <li>A folha de presenças inicia agora em Setembro, para suportar paróquias cuja catequese se inicia naquele mês;</li>
   </ul>
   <h4><img src="img/bug_transparent_icon.png"> Correções:</h4>
